<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StyleActivity">

    <Button
        android:id="@+id/returnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="toMain"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <TextView
        android:id="@+id/styleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/style"
        tools:layout_editor_absoluteX="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/styleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/styleLabel">

        <RadioButton
            android:id="@+id/NYRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_york"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="111dp" />

        <RadioButton
            android:id="@+id/ChicagoRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicago"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="106dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/type"
        tools:layout_editor_absoluteX="180dp"
        app:layout_constraintTop_toBottomOf="@id/styleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel">

        <RadioButton
            android:id="@+id/deluxeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deluxe"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="111dp" />

        <RadioButton
            android:id="@+id/meatzzaRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meatzza"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="106dp" />

        <RadioButton
            android:id="@+id/BBQRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bbq_chicken"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="106dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/size"
        tools:layout_editor_absoluteX="180dp"
        app:layout_constraintTop_toBottomOf="@id/typeGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/sizeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeLabel">

        <RadioButton
            android:id="@+id/smallRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/mediumRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/largeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/costText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_choosing_pizza_to_see_pricing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeGroup"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="138dp"
        android:contentDescription="@string/preview_pizza"
        app:layout_constraintTop_toBottomOf="@+id/costText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/addToOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>