<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzeriaController">

    <!-- Buttons Listed Vertically -->
    <Button
        android:id="@+id/orderPizzaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_pizza"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buildYourOwnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_your_own"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/orderPizzaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/buildYourOwnButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/viewOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_management"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/checkoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>